# FinHack2026-HokkienMeeIsRedAndBlack

./: CHANGES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  KYC_AUTH_UPDATE.md  QUICK_START.sh  README.md  SOLUTION_EXPLANATION.md  VISUAL_SUMMARY.md  amplify.yml  neptune_structure.md  prd.md  prd1.md  prd2.md
app/: globals.css
backend/: .env.example  .gitignore  README.md  check_neptune.py  main.py  patch_neptune.py  patch_scores.py  pyproject.toml  run_backend_8001.ps1  run_backend_local.ps1  setup_dynamodb.py
backend/agent/: __init__.py  graph_tools.py  tools.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: health.py  regulatory.py  risk.py  speech.py  transfer.py  voice.py
backend/app/core/: __init__.py  auth.py  config.py
backend/app/schemas/: speech.py  transfer.py  voice.py
backend/app/services/: __init__.py  aws_session.py  fraud_score_service.py  risk_engine.py  transcribe_service.py  transfer_agent_service.py  transfer_summary.py  wallet_ledger.py  warnings.py
backend/scripts/: neptune_smoke_test.py
backend/tests/: test_health.py  test_risk_graph.py  test_transaction_agent_guards.py  test_transfer_summary.py  test_transfer_transactions.py  test_wallet_ledger.py  test_warning_store.py
backend/transaction_agent/: __init__.py  agent.py  graph_tools.py  tools.py
backend/transaction_message/: __init__.py  agent.py  graph_tools.py
components/guardian/: fraud-graph.tsx  wallet-view.tsx
frontend/: .env.local.example  tsconfig.tsbuildinfo
frontend/app/: layout.tsx  page.tsx
frontend/app/kyc-callback/: page.tsx
frontend/app/kyc-complete/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/guardian/: dashboard-view.tsx  fraud-graph.tsx  scam-modal.tsx  (+3 more)
frontend/styles/: globals.css
(+1 files in other folders)
