[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.40.0",
    "fastapi[standard]>=0.136.1",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=4.2.1",
    "pydantic-settings>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
