[project]
name = "backend"
version = "0.1.0"
description = "TNG Guardian Voice — FastAPI backend with Alibaba Cloud eKYC"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3",
    "botocore>=1.42.96",
    "deepagents>=0.5.3",
    "fastapi[standard]>=0.136.1",
    "httpx>=0.27.0",
    "langchain-aws>=1.4.5",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=0.3.35",
    "langgraph>=1.0.2",
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "passlib[argon2]>=1.7.4",
    "pydantic-settings>=2.11.0",
    "pyjwt>=2.8.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "requests-aws4auth>=1.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
